--- a/index.html
+++ b/index.html
@@ -507,11 +507,27 @@
 									</ul>
 								</article>
 							        <article>
-									<a href="https://http://kpat.kipris.or.kr/kpat/biblioa.do?method=biblioFrame" target="_blank" class="image"><img src="images/1020140153744.jpg" alt="" /></a>
+									<a href="https://kpat.kipris.or.kr/kpat/biblioa.do?method=biblioFrame" target="_blank" class="image"><img src="images/1020140153744.jpg" alt="" /></a>
 									<h3>DATA VISUALIZATION METHOD AND SYSTEM USING REFERENCE SEMANTIC MAP</h3>
 									<p>Kyungwon Lee, Gi-nam Kim, <strong>Hyoji Ha</strong>, Hanmin Choi, Wonjoo Hwang, Hansung Kang. Publication of KR1017941370000, KIPO. (October 2017). </p>
 									<ul class="actions">
 										<li><a href="files/1020140153744.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="http://kpat.kipris.or.kr/kpat/biblioa.do?method=biblioFrame&start=biblio&searchFg=N&KeyWord=1020160067650&applno=1020160067650&Gubun=1&sCurrPage=1&searchFg=N&expression=1020160067650&openPageId=View01&isMyConcern=N&isMyFolder=N&config=/main/sharePage_KR.jsp,%20className=jeus_jspwork._main._700_sharePage_5fKR_5fjsp,%20jspUri=%27/main/sharePage_KR.jsp" target="_blank" class="image"><img src="images/1017308830000.jpg" alt="" /></a>
+									<h3>Methods And Apparatus For Visualizing Hierarchical Information Of Comment Data</h3>
+									<p>Kyungwon Lee, <strong>Hyoji Ha</strong>, Hyunwoo Han. Publication of KR1017308830000, KIPO. (April 2017). </p>
+									<ul class="actions">
+										<li><a href="files/1017308830000.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								 <article>
+									<a href="https://patents.google.com/patent/KR101602898B1/ko" target="_blank" class="image"><img src="images/KR101602898B1.jpg" alt="" /></a>
+									<h3>DATA VISUALIZATION METHOD AND SYSTEM USING COMMENT DATA FOR OBJECTS</h3>
+									<p>Kyungwon Lee, Gi-nam Kim, <strong>Hyoji Ha</strong>. Publication of KR101602898B1, KIPO. (March 2016). </p>
+									<ul class="actions">
+										<li><a href="files/KR101602898B1.pdf" target="_blank" class="button">Download PDF</a></li>
 									</ul>
 								</article>
 								
