--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 	<!-- Banner -->
 							<section id="banner">
 									<div class="content">
-										<header>
+											<header>
 											<h1>Hyoji Ha</h1>
-											<p>Postdoctoral researcher, Graduate School of Metaverse, Sogang University.</p>
+											<p>Research Assistant Professor, Humanities Research Institute, Ajou University.</p>
 										</header>
 										<p>
-											 <strong>Address:</strong> 402  Arupe Hall, 35, Baekbeom-ro, Mapo-gu,</br>
-											 Seoul, Republic of Korea, 04107</br>
-											 <strong>Phone:</strong> 070.7736.3765 <strong>Mobile:</strong> 82-10-3760-3972</br>
-											 <strong>E-mail:</strong> hjha0508@sogang.ac.kr / hyojie@gmail.com</p>
+											 <strong>Address:</strong> 208  Dasan Hall, 206, Worldcup-ro, Yeongtong-gu,</br>
+											 Suwon, Republic of Korea, 16499</br>
+											 <strong>Phone:</strong> 031.219.3086 <strong>Mobile:</strong> 82-10-3760-3972</br>
+											 <strong>E-mail:</strong> hjha0508@ajou.ac.kr / hyojie@gmail.com</p>
 
 
 										<ul class="actions">
@@ -54,7 +54,7 @@
 									</span>
 								</section>
 
-							<!-- Section -->
+				<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Background & Research/Education Career</h2>
@@ -63,15 +63,15 @@
 										<article>
 											<span class="icon solid fa-university"></span>
 											<div class="content">
-												<h3>Postdoctoral researcher</h3>
-												<p>Graduate School of Metaverse, Sogang University, South Korea (2023~)</p>
+												<h3>Research Assistant Professor</h3>
+												<p>Humanities Research Institute, Ajou University, South Korea (2025~)</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-flask"></span>
+											<span class="icon solid fa-university"></span>
 											<div class="content">
-												<h3>Co-I in MSIT(Ministry of Science and ICT), Korea, under the ITRC(Information Technology Research Center) support program supervised by the IITP(Institute for Information & Communications Technology Planning & Evaluation)</h3>
-												<p>Development of Open Platform Technology for Web 3.0, Sogang University, South Korea (2023~)</p>
+												<h3>Postdoctoral researcher</h3>
+												<p>Graduate School of Metaverse, Sogang University, South Korea (2023~2025)</p>
 											</div>
 										</article>
 										<article>
@@ -84,15 +84,22 @@
 										<article>
 											<span class="icon solid fa-flask"></span>
 											<div class="content">
+												<h3>Co-I in MSIT(Ministry of Science and ICT), Korea, under the ITRC(Information Technology Research Center) support program supervised by the IITP(Institute for Information & Communications Technology Planning & Evaluation)</h3>
+												<p>Development of Open Platform Technology for Web 3.0, Sogang University, South Korea (2023~2025)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-flask"></span>
+											<div class="content">
 												<h3>Research Associate in National Research Foundation of Korea(NRF) grant funded by the Korea government(MSIT)</h3>
-												<p>Immersive Multi-dimensional Data Visualization based on Extended Reality, Sogang University, South Korea (2023~)</p>
+												<p>Immersive Multi-dimensional Data Visualization based on Extended Reality, Sogang University, South Korea (2023~2025)</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-flask"></span>
 											<div class="content">
 												<h3>Research Associate in Ministry of Science and Technology</h3>
-												<p>Metaverse Convergence Graduate School Support Project, Sogang University, South Korea (2023~)</p>
+												<p>Metaverse Convergence Graduate School Support Project, Sogang University, South Korea (2023~2025)</p>
 											</div>
 										</article>
 										<article>
