--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/Profile_2024.jpg" alt="" />
+										<img src="images/Profile_2024.jpg" alt=""  width="300" height="400" />
 									</span>
 								</section>
 
